# madedit-mod

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  How to build MadEdit-Mod.txt  How to build MadEdit-Mode.txt  MadPython.txt  Makefile.am  Makefile.in  MoreEncodings.txt  NEWS  README  README.md  README.txt  aclocal.m4  appveyor.yml  autogen.sh  clearsavedbms.py  config.h.in  configure  configure.ac  convertcfg.py  description-pak  el.po  index.html  madedit-static.spec  madedit.desktop  madedit.spec  madedit.xpm  params.json
.github/: ISSUE_TEMPLATE.md
Dictionaries/: MadDict.en_US  README.txt  README_de_DE.txt  README_fr_FR.txt  af_ZA.dic  fr_FR.dic
ZLib/: zlib.lib  zlibd.lib
astyle/: Makefile.am  asstreamiterator.cpp  asstreamiterator.h  astylepredefinedstyles.h  formattersettings.cpp  formattersettings.h
astyle/astyle/: ASBeautifier.cpp  ASEnhancer.cpp  ASFormatter.cpp  ASLocalizer.cpp  ASLocalizer.h  ASResource.cpp  Makefile  astyle.h  astyle.html  astyle_main.cpp  astyle_main.h  index.html  install.html  links.html  news.html  newsArchives.html  notes.html  notesArchives.html  scripts.html  subversion.html  vsinstall.html
astyle/resources/: Makefile.am  configuration.xrc  manifest.xml
charset-detector/src/: CharDistribution.h  LangHebrewModel.cpp  Makefile  nsCodingStateMachine.h  nsEscSM.cpp  nsSBCSGroupProber.cpp  nsSBCSGroupProber.h  nsUniversalDetector.cpp  prmem.h  uchardet.cpp
debian/: control
devcpp/: MadEdit.dev  MadEdit.layout  MadEdit_private.h  MadEdit_private.rc  Makefile.win
help/: Help.txt  KeyMapping.html  MadPython.txt  RegexReference.html  fibo.py
image2xpm/: UpgradeLog.XML  image2xpm _10.vcxproj  image2xpm _14.vcxproj  image2xpm _14.vcxproj.filters  image2xpm.dev  image2xpm.layout  image2xpm.sln  image2xpm.sln.old  image2xpm.vcproj  image2xpm.vcxproj  image2xpmApp.cpp  image2xpmApp.h  image2xpmFrm.cpp  image2xpmFrm.h  image2xpmFrm.wxform  image2xpmFrm.xml  image2xpm_10.sln  image2xpm_14.sln  image2xpm_private.h  image2xpm_private.rc
image2xpm/Release/: CL.read.1.tlog  CL.write.1.tlog  RCa07764  cl.command.1.tlog  image2xpm.lastbuildstate  image2xpmApp.res  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
images/: Mad2.xpm  Mad_16x15.xpm  alignleft.xpm  alignright.xpm  astyle.xpm  bookmark.xpm  bookmark_clear.xpm  bookmark_next.xpm  bookmark_prev.xpm  bookmark_toggle.xpm  case.xpm  checked.xpm  checked_dis.xpm  closeall.xpm  closepreview.xpm  columnmode.xpm  comment.xpm  copy.xpm  cplusplus.xpm  cut.xpm  dateadd.xpm  delete.xpm  dnd_copy.cur  dnd_copy.xpm  dnd_move.cur  dnd_move.xpm  dnd_none.xpm  dotmatchnewline.xpm  dotnewline.xpm  down.xpm  encoding.xpm  fileclose.xpm  filehandle.xpm  fileopen.xpm  filesave.xpm  filesaveas.xpm  findnext.xpm  findprev.xpm  folderfind.xpm  font.xpm  (+83 more)
json/: JSON.cpp  JSON.h
libpng/: libpng.lib  libpngd.lib
libunicows/: README.txt
makefiles/: Makefile.install  Makefile.mac  Makefile.mingw
markdown/: markdown-tokens.cpp  markdown-tokens.h  markdown.cpp  markdown.h
minipython/: MiniPython.7z  README.txt
minipython/Include/: Python.h  object.h  objimpl.h  py_curses.h  pyconfig-32.h  pyconfig-64.h  pyconfig-arm32.h  (+8 more)
patches/: Readme.txt  auibook.cpp  dialog.cpp
po/: POTFILES.in  de_DE.po  el.mo  el.po  es.mo  es.po  it_IT.gmo  it_IT.mo  it_IT.po  ja_JP.gmo  ja_JP.mo  ja_JP.po  madedit.pot  pl_PL.po  ru_RU.mo  ru_RU.po  src.list  wxstd.po.cpp  wxstd.po.txt  xgettext.bat  zh_CN.gmo  zh_CN.mo  zh_CN.po  zh_TW.gmo  zh_TW.mo  zh_TW.po
scripts/: Makefile.am  Makefile.in  deletstring.mpy  dosdir2unix.mpy  findall.mpy  insertlines.mpy  regex_patch.mpy  replaceall.mpy  replacehexstring.mpy
spellchecker/: HunspellInterface.cpp  HunspellInterface.h  Hunspell_v80.sln  PersonalDictionary.cpp  PersonalDictionary.h  SpellCheckEngineInterface.cpp  SpellCheckEngineInterface.h  SpellCheckEngineOption.cpp  SpellCheckEngineOption.h  SpellCheckUserInterface.cpp  SpellCheckUserInterface.h  SpellCheckerManager.cpp  SpellCheckerManager.h  libhunspell_v10.vcxproj  libhunspell_v80.vcproj  libhunspell_v80.vcxproj.filters
src/: EmbeddedPython.cpp  EmbeddedPython.hpp  MadAboutDialog.cpp  MadAboutDialog.h  MadAboutDialog.wxform  MadCommand.h  MadConvEncDialog.cpp  MadConvEncDialog.h  MadConvEncDialog.wxform  MadEditApp.aps  MadEditApp.cpp  MadEditApp.h  MadEditApp.rc  MadEditFrame.cpp  MadEditFrame.h  MadEditFrame.wxform  MadFileAssociationDialog.cpp  MadFileAssociationDialog.h  MadFileAssociationDialog.wxform  MadFileHistoryDialog.cpp  MadFileHistoryDialog.h  MadFindInFilesDialog.cpp  MadFindInFilesDialog.h  MadFindInFilesDialog.wxform  MadHighlightingDialog.cpp  MadHighlightingDialog.h  MadHighlightingDialog.wxform  MadMacroDlg.cpp  MadMacroDlg.h  MadNumberDlg.cpp  MadNumberDlg.h  MadNumberDlg.wxform  MadOptionsDialog.cpp  MadOptionsDialog.h  MadOptionsDialog.wxform  MadPlugin.cpp  MadPrintout.cpp  MadPrintout.h  MadPurgeHistoryDialog.cpp  MadPurgeHistoryDialog.h  (+34 more)
syntax/: Dark.sch  DarkBlue.sch  Gray.sch  Makefile.am  Makefile.in  extension.list  filename.list  firstline.list  syntax_actionscript.syn  syntax_angelscript.syn  syntax_awk.syn  syntax_batch.syn  syntax_conf.syn  syntax_cpp.syn  syntax_csharp.syn  syntax_css.syn  syntax_d.syn  syntax_diff.syn  syntax_fortran.syn  syntax_freebasic.syn  syntax_gnuasm.syn  syntax_go.syn  syntax_html.syn  syntax_java.syn  syntax_javascript.syn  syntax_js_html.syn  syntax_jsp.syn  syntax_latex.syn  syntax_lua.syn  syntax_mpython.att  syntax_mpython.syn  syntax_nfo.syn  syntax_pas.syn  syntax_perl.syn  syntax_php.syn  syntax_python.syn  syntax_reg.syn  syntax_ruby.syn  syntax_sh.syn  syntax_sptlog.syn  (+14 more)
vc10/: MadEdit.sln  MadEdit.vcxproj  MadEdit.vcxproj.filters  libhunspell.vcxproj  pyproject.props  pyproject.vsprops  pythoncore.vcxproj
vc12/: MadEdit.sln  MadEdit.vcxproj  MadEdit.vcxproj.filters
vc71/: MadEdit.sln  MadEdit.vcproj
vc80/: MadEdit.sln  MadEdit.vcproj  libhunspell.vcproj  pythoncore.vcproj
vc90/: MadEdit.sln  MadEdit.vcproj
(+243 files in other folders)
