SUBDIRS = syntax po

bin_PROGRAMS = madedit
AM_CPPFLAGS = -I$(top_srcdir)/charset-detector/include -I$(top_srcdir)/charset-detector/src \
-I$(top_srcdir)/charset-detector/src/tables -I$(top_srcdir)/spellchecker -I$(top_srcdir)/spellchecker/hunspell/src \
-I$(top_srcdir)/spellchecker/hunspell/src/hunspell -I$(top_srcdir)/spellchecker/hunspell/src/win_api \
-I$(top_srcdir)/minipython/Include -I$(top_srcdir)/minipython/Python \
-I$(top_srcdir)/minipython/Modules/zlib -I$(top_srcdir)/markdown -I$(top_srcdir)/astyle \
-I$(top_srcdir)/astyle/astyle

madedit_CXXFLAGS = -DDATA_DIR=\"${datadir}\"
madedit_SOURCES =	src/MadAboutDialog.cpp \
	src/MadAboutDialog.h \
	src/MadCommand.h \
	src/MadConvEncDialog.cpp \
	src/MadConvEncDialog.h \
	src/MadEditApp.cpp \
	src/MadEditApp.h \
	src/MadEditFrame.cpp \
	src/MadEditFrame.h \
	src/MadFindInFilesDialog.cpp \
	src/MadFindInFilesDialog.h \
	src/MadHighlightingDialog.cpp \
	src/MadHighlightingDialog.h \
	src/MadOptionsDialog.cpp \
	src/MadOptionsDialog.h \
	src/MadPlugin.cpp \
	src/MadPrintout.cpp \
	src/MadPrintout.h \
	src/MadSearchReplaceDialog.cpp \
	src/MadSearchReplaceDialog.h \
	src/MadSortDialog.cpp \
	src/MadSortDialog.h \
	src/MadUtils.cpp \
	src/MadUtils.h \
	src/MadFileAssociationDialog.cpp \
	src/MadFileAssociationDialog.h \
	src/MadWordCountDialog.cpp \
	src/MadWordCountDialog.h \
	src/MadPurgeHistoryDialog.cpp \
	src/MadPurgeHistoryDialog.h \
	src/MadNumberDlg.cpp \
	src/MadNumberDlg.h \
	src/MadWinListDialog.cpp \
	src/MadWinListDialog.h \
	src/MadSaveQueryDialog.h \
	src/MadSaveQueryDialog.cpp \
	src/checkedlistctrl.cpp \
	src/checkedlistctrl.h \
	src/MadMacroDlg.cpp \
	src/MadMacroDlg.h \
	src/MadRecentList.cpp \
	src/MadRecentList.h \
	src/MadPython.hpp \
	src/EmbeddedPython.cpp \
	src/EmbeddedPython.hpp \
	src/plugin.h \
	src/MadEdit/caret_new.cpp \
	src/MadEdit/caret_new.h \
	src/MadEdit/clipbrd_gtk.cpp \
	src/MadEdit/clipbrd_gtk.h \
	src/MadEdit/MadDeque.hpp \
	src/MadEdit/MadEdit.cpp \
	src/MadEdit/MadEdit.h \
	src/MadEdit/MadEditAdvanced.cpp \
	src/MadEdit/MadEditBasic.cpp \
	src/MadEdit/MadEditCommand.cpp \
	src/MadEdit/MadEditCommand.h \
	src/MadEdit/MadEditSearch.cpp \
	src/MadEdit/MadEdit_gtk.cpp \
	src/MadEdit/MadEncoding.cpp \
	src/MadEdit/MadEncoding.h \
	src/MadEdit/MadLines.cpp \
	src/MadEdit/MadLines.h \
	src/MadEdit/MadSyntax.cpp \
	src/MadEdit/MadSyntax.h \
	src/MadEdit/MadUndo.cpp \
	src/MadEdit/MadUndo.h \
	src/MadEdit/TradSimp.cpp \
	src/MadEdit/TradSimp.h \
	src/MadEdit/ucs4_t.h \
	src/version.cpp \
	charset-detector/src/CharDistribution.cpp \
	charset-detector/src/CharDistribution.h \
	charset-detector/src/JpCntx.cpp \
	charset-detector/src/JpCntx.h \
	charset-detector/src/LangBulgarianModel.cpp \
	charset-detector/src/LangCyrillicModel.cpp \
	charset-detector/src/LangGreekModel.cpp \
	charset-detector/src/LangHebrewModel.cpp \
	charset-detector/src/LangHungarianModel.cpp \
	charset-detector/src/LangThaiModel.cpp \
	charset-detector/src/nsBig5Prober.cpp \
	charset-detector/src/nsBig5Prober.h \
	charset-detector/src/nsCharSetProber.cpp \
	charset-detector/src/nsCharSetProber.h \
	charset-detector/src/nsCodingStateMachine.h \
	charset-detector/src/nscore.h \
	charset-detector/src/nsEscCharsetProber.cpp \
	charset-detector/src/nsEscCharsetProber.h \
	charset-detector/src/nsEscSM.cpp \
	charset-detector/src/nsEUCJPProber.cpp \
	charset-detector/src/nsEUCJPProber.h \
	charset-detector/src/nsEUCKRProber.cpp \
	charset-detector/src/nsEUCKRProber.h \
	charset-detector/src/nsEUCTWProber.cpp \
	charset-detector/src/nsEUCTWProber.h \
	charset-detector/src/nsGB2312Prober.cpp \
	charset-detector/src/nsGB2312Prober.h \
	charset-detector/src/nsHebrewProber.cpp \
	charset-detector/src/nsHebrewProber.h \
	charset-detector/src/nsLatin1Prober.cpp \
	charset-detector/src/nsLatin1Prober.h \
	charset-detector/src/nsMBCSGroupProber.cpp \
	charset-detector/src/nsMBCSGroupProber.h \
	charset-detector/src/nsMBCSSM.cpp \
	charset-detector/src/nsPkgInt.h \
	charset-detector/src/nsSBCharSetProber.cpp \
	charset-detector/src/nsSBCharSetProber.h \
	charset-detector/src/nsSBCSGroupProber.cpp \
	charset-detector/src/nsSBCSGroupProber.h \
	charset-detector/src/nsSJISProber.cpp \
	charset-detector/src/nsSJISProber.h \
	charset-detector/src/nsUniversalDetector.cpp \
	charset-detector/src/nsUniversalDetector.h \
	charset-detector/src/nsUTF8Prober.cpp \
	charset-detector/src/nsUTF8Prober.h \
	charset-detector/src/prmem.h \
	charset-detector/src/entry/impl.cpp \
	charset-detector/include/chardetect.h \
	spellchecker/HunspellInterface.cpp \
	spellchecker/HunspellInterface.h \
	spellchecker/PersonalDictionary.cpp \
	spellchecker/PersonalDictionary.h \
	spellchecker/SpellCheckEngineInterface.cpp \
	spellchecker/SpellCheckEngineInterface.h \
	spellchecker/SpellCheckEngineOption.cpp \
	spellchecker/SpellCheckEngineOption.h \
	spellchecker/SpellCheckUserInterface.cpp \
	spellchecker/SpellCheckUserInterface.h \
	spellchecker/SpellCheckerManager.cpp \
	spellchecker/SpellCheckerManager.h \
	spellchecker/hunspell/src/hunspell/affentry.cxx \
	spellchecker/hunspell/src/hunspell/affixmgr.cxx \
	spellchecker/hunspell/src/hunspell/csutil.cxx \
	spellchecker/hunspell/src/hunspell/filemgr.cxx \
	spellchecker/hunspell/src/hunspell/hashmgr.cxx \
	spellchecker/hunspell/src/hunspell/hunspell.cxx \
	spellchecker/hunspell/src/hunspell/hunzip.cxx \
	spellchecker/hunspell/src/hunspell/phonet.cxx \
	spellchecker/hunspell/src/hunspell/replist.cxx \
	spellchecker/hunspell/src/hunspell/suggestmgr.cxx \
	spellchecker/config.h \
	spellchecker/hunspell/src/win_api/hunspelldll.h \
	spellchecker/hunspell/src/hunspell/affentry.hxx \
	spellchecker/hunspell/src/hunspell/affixmgr.hxx \
	spellchecker/hunspell/src/hunspell/atypes.hxx \
	spellchecker/hunspell/src/hunspell/baseaffix.hxx \
	spellchecker/hunspell/src/hunspell/csutil.hxx \
	spellchecker/hunspell/src/hunspell/dictmgr.hxx \
	spellchecker/hunspell/src/hunspell/filemgr.hxx \
	spellchecker/hunspell/src/hunspell/hashmgr.hxx \
	spellchecker/hunspell/src/hunspell/htypes.hxx \
	spellchecker/hunspell/src/hunspell/hunspell.h \
	spellchecker/hunspell/src/hunspell/hunspell.hxx \
	spellchecker/hunspell/src/hunspell/hunvisapi.h \
	spellchecker/hunspell/src/hunspell/hunzip.hxx \
	spellchecker/hunspell/src/hunspell/langnum.hxx \
	spellchecker/hunspell/src/hunspell/phonet.hxx \
	spellchecker/hunspell/src/hunspell/replist.hxx \
	spellchecker/hunspell/src/hunspell/suggestmgr.hxx \
	spellchecker/hunspell/src/hunspell/w_char.hxx \
	markdown/markdown-tokens.cpp \
	markdown/markdown-tokens.h \
	markdown/markdown.cpp \
	markdown/markdown.h \
	minipython/Include/abstract.h \
	minipython/Include/asdl.h \
	minipython/Include/ast.h \
	minipython/Include/bitset.h \
	minipython/Include/boolobject.h \
	minipython/Include/bufferobject.h \
	minipython/Include/bytearrayobject.h \
	minipython/Include/bytes_methods.h \
	minipython/Include/bytesobject.h \
	minipython/Include/cellobject.h \
	minipython/Include/ceval.h \
	minipython/Include/classobject.h \
	minipython/Include/cobject.h \
	minipython/Include/code.h \
	minipython/Include/codecs.h \
	minipython/Include/compile.h \
	minipython/Include/complexobject.h \
	minipython/Include/descrobject.h \
	minipython/Include/dictobject.h \
	minipython/Include/dtoa.h \
	minipython/Include/enumobject.h \
	minipython/Include/errcode.h \
	minipython/Include/eval.h \
	minipython/Include/fileobject.h \
	minipython/Include/floatobject.h \
	minipython/Include/frameobject.h \
	minipython/Include/funcobject.h \
	minipython/Include/genobject.h \
	minipython/Include/graminit.h \
	minipython/Include/grammar.h \
	minipython/Include/import.h \
	minipython/Include/intobject.h \
	minipython/Include/intrcheck.h \
	minipython/Include/iterobject.h \
	minipython/Include/listobject.h \
	minipython/Include/longintrepr.h \
	minipython/Include/longobject.h \
	minipython/Include/marshal.h \
	minipython/Include/metagrammar.h \
	minipython/Include/methodobject.h \
	minipython/Include/modsupport.h \
	minipython/Include/moduleobject.h \
	minipython/Include/node.h \
	minipython/Include/object.h \
	minipython/Include/objimpl.h \
	minipython/Include/opcode.h \
	minipython/Include/osdefs.h \
	minipython/Include/parsetok.h \
	minipython/Include/patchlevel.h \
	minipython/Include/pgen.h \
	minipython/Include/pgenheaders.h \
	minipython/Include/py_curses.h \
	minipython/Include/pyarena.h \
	minipython/Include/pycapsule.h \
	minipython/Include/pyctype.h \
	minipython/Include/pydebug.h \
	minipython/Include/pyerrors.h \
	minipython/Include/pyexpat.h \
	minipython/Include/pyfpe.h \
	minipython/Include/pygetopt.h \
	minipython/Include/pymactoolbox.h \
	minipython/Include/pymath.h \
	minipython/Include/pymem.h \
	minipython/Include/pyport.h \
	minipython/Include/pystate.h \
	minipython/Include/pystrcmp.h \
	minipython/Include/pystrtod.h \
	minipython/Include/Python-ast.h \
	minipython/Include/Python.h \
	minipython/Include/pythonrun.h \
	minipython/Include/pythread.h \
	minipython/Include/rangeobject.h \
	minipython/Include/setobject.h \
	minipython/Include/sliceobject.h \
	minipython/Include/stringobject.h \
	minipython/Include/structmember.h \
	minipython/Include/structseq.h \
	minipython/Include/symtable.h \
	minipython/Include/sysmodule.h \
	minipython/Include/timefuncs.h \
	minipython/Include/token.h \
	minipython/Include/traceback.h \
	minipython/Include/tupleobject.h \
	minipython/Include/ucnhash.h \
	minipython/Include/unicodeobject.h \
	minipython/Include/weakrefobject.h \
	minipython/Include/pyconfig.h \
	minipython/Include/pyconfig-64.h \
	minipython/Include/pyconfig-32.h \
	minipython/Include/pyconfig-win.h \
	minipython/Modules/_math.h \
	minipython/Modules/zlib/crc32.h \
	minipython/Modules/zlib/deflate.h \
	minipython/Modules/zlib/inffast.h \
	minipython/Modules/zlib/inffixed.h \
	minipython/Modules/zlib/inflate.h \
	minipython/Modules/zlib/inftrees.h \
	minipython/Modules/zlib/trees.h \
	minipython/Modules/zlib/zconf.h \
	minipython/Modules/zlib/zconf.in.h \
	minipython/Modules/zlib/zlib.h \
	minipython/Modules/zlib/zutil.h \
	minipython/Objects/stringlib/count.h \
	minipython/Objects/stringlib/fastsearch.h \
	minipython/Objects/stringlib/find.h \
	minipython/Objects/stringlib/partition.h \
	minipython/Objects/stringlib/split.h \
	minipython/Objects/unicodetype_db.h \
	minipython/Parser/parser.h \
	minipython/Parser/tokenizer.h \
	minipython/Python/importdl.h \
	minipython/Python/thread_pthread.h \
	minipython/Modules/_codecsmodule.c \
	minipython/Modules/_math.c \
	minipython/Modules/errnomodule.c \
	minipython/Modules/future_builtins.c \
	minipython/Modules/gcmodule.c \
	minipython/Modules/getbuildinfo.c \
	minipython/Modules/getpath.c \
	minipython/Modules/config.c \
	minipython/Modules/mathmodule.c \
	minipython/Modules/parsermodule.c \
	minipython/Modules/stropmodule.c \
	minipython/Modules/symtablemodule.c \
	minipython/Modules/zipimport.c \
	minipython/Modules/zlibmodule.c \
	minipython/Modules/zlib/adler32.c \
	minipython/Modules/zlib/compress.c \
	minipython/Modules/zlib/crc32.c \
	minipython/Modules/zlib/deflate.c \
	minipython/Modules/zlib/gzclose.c \
	minipython/Modules/zlib/gzguts.h \
	minipython/Modules/zlib/gzlib.c \
	minipython/Modules/zlib/gzread.c \
	minipython/Modules/zlib/gzwrite.c \
	minipython/Modules/zlib/infback.c \
	minipython/Modules/zlib/inffast.c \
	minipython/Modules/zlib/inflate.c \
	minipython/Modules/zlib/inftrees.c \
	minipython/Modules/zlib/trees.c \
	minipython/Modules/zlib/uncompr.c \
	minipython/Modules/zlib/zutil.c \
	minipython/Objects/abstract.c \
	minipython/Objects/boolobject.c \
	minipython/Objects/bufferobject.c \
	minipython/Objects/capsule.c \
	minipython/Objects/cellobject.c \
	minipython/Objects/classobject.c \
	minipython/Objects/cobject.c \
	minipython/Objects/codeobject.c \
	minipython/Objects/complexobject.c \
	minipython/Objects/descrobject.c \
	minipython/Objects/dictobject.c \
	minipython/Objects/enumobject.c \
	minipython/Objects/exceptions.c \
	minipython/Objects/fileobject.c \
	minipython/Objects/floatobject.c \
	minipython/Objects/frameobject.c \
	minipython/Objects/funcobject.c \
	minipython/Objects/genobject.c \
	minipython/Objects/intobject.c \
	minipython/Objects/iterobject.c \
	minipython/Objects/listobject.c \
	minipython/Objects/longobject.c \
	minipython/Objects/methodobject.c \
	minipython/Objects/moduleobject.c \
	minipython/Objects/object.c \
	minipython/Objects/obmalloc.c \
	minipython/Objects/rangeobject.c \
	minipython/Objects/setobject.c \
	minipython/Objects/sliceobject.c \
	minipython/Objects/stringobject.c \
	minipython/Objects/structseq.c \
	minipython/Objects/tupleobject.c \
	minipython/Objects/typeobject.c \
	minipython/Objects/unicodectype.c \
	minipython/Objects/unicodeobject.c \
	minipython/Objects/weakrefobject.c \
	minipython/Parser/acceler.c \
	minipython/Parser/bitset.c \
	minipython/Parser/firstsets.c \
	minipython/Parser/grammar.c \
	minipython/Parser/grammar1.c \
	minipython/Parser/listnode.c \
	minipython/Parser/metagrammar.c \
	minipython/Parser/myreadline.c \
	minipython/Parser/node.c \
	minipython/Parser/parser.c \
	minipython/Parser/parsetok.c \
	minipython/Parser/tokenizer.c \
	minipython/Python/_warnings.c \
	minipython/Python/asdl.c \
	minipython/Python/ast.c \
	minipython/Python/bltinmodule.c \
	minipython/Python/ceval.c \
	minipython/Python/codecs.c \
	minipython/Python/compile.c \
	minipython/Python/dtoa.c \
	minipython/Python/errors.c \
	minipython/Python/formatter_string.c \
	minipython/Python/formatter_unicode.c \
	minipython/Python/frozen.c \
	minipython/Python/future.c \
	minipython/Python/getargs.c \
	minipython/Python/getcompiler.c \
	minipython/Python/getcopyright.c \
	minipython/Python/getopt.c \
	minipython/Python/getplatform.c \
	minipython/Python/getversion.c \
	minipython/Python/graminit.c \
	minipython/Python/import.c \
	minipython/Python/importdl.c \
	minipython/Python/marshal.c \
	minipython/Python/modsupport.c \
	minipython/Python/mysnprintf.c \
	minipython/Python/mystrtoul.c \
	minipython/Python/peephole.c \
	minipython/Python/pyarena.c \
	minipython/Python/pyctype.c \
	minipython/Python/pyfpe.c \
	minipython/Python/pymath.c \
	minipython/Python/pystate.c \
	minipython/Python/pystrcmp.c \
	minipython/Python/pystrtod.c \
	minipython/Python/Python-ast.c \
	minipython/Python/pythonrun.c \
	minipython/Python/structmember.c \
	minipython/Python/symtable.c \
	minipython/Python/sysmodule.c \
	minipython/Python/thread.c \
	minipython/Python/traceback.c \
	astyle/formattersettings.cpp \
	astyle/formattersettings.h \
	astyle/asstreamiterator.cpp \
	astyle/asstreamiterator.h \
	astyle/astyle/ASBeautifier.cpp \
	astyle/astyle/ASEnhancer.cpp \
	astyle/astyle/ASFormatter.cpp \
	astyle/astyle/ASResource.cpp \
	astyle/astyle/astyle.h

dist_doc_DATA = gpl-3.0.txt README.txt help/MadPython.txt help/Help.txt help/KeyMapping.html help/RegexReference.html
pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = madedit.xpm

appdir = $(datadir)/applications
app_DATA = madedit.desktop

EXTRA_DIST = m4/ChangeLog  $(pixmaps_DATA) $(app_DATA)

noinst_HEADERS =	description-pak \
	README.txt \
	autogen.sh \
	chmod_644_all_files.sh \
	madedit.spec \
	madedit-static.spec \
	packaging/debian/changelog \
	packaging/debian/control \
	packaging/debian/copyright \
	packaging/debian/menu \
	packaging/debian/rules \
	packaging/freebsd/pkg-comment \
	packaging/freebsd/pkg-descr \
	packaging/freebsd/pkg-plist_old \
	packaging/freebsd/pkgcreate.txt \
	m4/gettext.m4 \
	m4/iconv.m4 \
	m4/lib-ld.m4 \
	m4/lib-link.m4 \
	m4/lib-prefix.m4 \
	m4/nls.m4 \
	m4/po.m4 \
	m4/progtest.m4 \
	m4/ChangeLog \
	src/MadEditApp.rc \
	src/MadAboutDialog.wxform \
	src/MadConvEncDialog.wxform \
	src/MadEditFrame.wxform \
	src/MadFileAssociationDialog.wxform \
	src/MadFindInFilesDialog.wxform \
	src/MadHighlightingDialog.wxform \
	src/MadOptionsDialog.wxform \
	src/MadSearchReplaceDialog.wxform \
	src/MadSortDialog.wxform \
	src/MadWordCountDialog.wxform \
	src/plugin_example/makefile.linux \
	src/plugin_example/makefile.mingw32 \
	src/plugin_example/makefile.vc \
	src/plugin_example/plugin.cpp \
	src/plugin_example/vc_cl.bat \
	src/plugin_example/wxwin16x16.xpm \
	minipython/Python/thread_nt.h \
	minipython/PC/config.c \
	minipython/PC/dl_nt.c \
	minipython/PC/getpathp.c \
	minipython/PC/import_nt.c \
	minipython/Python/dynload_win.c \
	minipython/PC/errmap.h \
	devcpp/MadEdit.dev \
	devcpp/MadEdit.layout \
	devcpp/MadEdit_private.h \
	devcpp/MadEdit_private.rc \
	image2xpm/image2xpm.dev \
	image2xpm/image2xpm.layout \
	image2xpm/image2xpmApp.cpp \
	image2xpm/image2xpmApp.h \
	image2xpm/image2xpmApp.rc \
	image2xpm/image2xpmFrm.cpp \
	image2xpm/image2xpmFrm.h \
	image2xpm/image2xpmFrm.wxform \
	image2xpm/image2xpmFrm.xml \
	image2xpm/image2xpm_private.h \
	image2xpm/image2xpm_private.rc \
	images/closeall.xpm \
	images/columnmode.xpm \
	images/comment.xpm \
	images/copy.xpm \
	images/cut.xpm \
	images/down.xpm \
	images/fileclose.xpm \
	images/fileopen.xpm \
	images/filesave.xpm \
	images/filesaveas.xpm \
	images/find.xpm \
	images/findnext.xpm \
	images/findprev.xpm \
	images/font.xpm \
	images/fontname.xpm \
	images/fontsize.xpm \
	images/hexmode.xpm \
	images/indent.xpm \
	images/Mad.ico \
	images/Mad2.ico \
	images/Mad.xpm \
	images/Mad2.xpm \
	images/Mad_16x15.xpm \
	images/new.xpm \
	images/nowrap.xpm \
	images/null.xpm \
	images/paste.xpm \
	images/preview.xpm \
	images/print.xpm \
	images/quit.xpm \
	images/redo.xpm \
	images/replace.xpm \
	images/saveall.xpm \
	images/textmode.xpm \
	images/uncomment.xpm \
	images/undo.xpm \
	images/unindent.xpm \
	images/wrapbycol.xpm \
	images/wrapbywin.xpm \
	makefiles/Makefile.mac \
	makefiles/Makefile.mingw \
	makefiles/Makefile.install \
	makefiles/zcfg_wx_debug.sh \
	makefiles/zcfg_wx_release.sh \
	makefiles/zcfg_madedit_release.sh \
	src/MadEdit/clipbrd_gtk_wx2.cpp \
	src/MadEdit/clipbrd_gtk_wx2.h \
	src/MadEdit/clipbrd_gtk_wx3.cpp \
	src/MadEdit/clipbrd_gtk_wx3.h \
	po/madedit.pot \
	po/src.list \
	po/wxstd.po.txt \
	po/wxstd.po.cpp \
	po/xgettext.bat \
	po/xgettext_join.bat \
	charset-detector/Makefile \
	charset-detector/MPL-1.1.txt \
	charset-detector/README \
	charset-detector/test/Makefile \
	charset-detector/test/test-chardetect.c \
	charset-detector/src/Makefile \
	charset-detector/src/tables/Big5Freq.tab \
	charset-detector/src/tables/EUCKRFreq.tab \
	charset-detector/src/tables/EUCTWFreq.tab \
	charset-detector/src/tables/GB2312Freq.tab \
	charset-detector/src/tables/JISFreq.tab \
	charset-detector/src/entry/export-symbol.list

DOMAIN = madedit-mod
podir = $(top_srcdir)/po
LINGUAS = @ALL_LINGUAS@

loc:
	@linguas='$(LINGUAS)'; \
	for lang in $$linguas; do \
		dir=./locale/$$lang; \
		$(mkinstalldirs) $$dir; \
		if test -r $(podir)/$$lang.gmo; then \
			msgmerge -U $(podir)/$$lang.po $(podir)/madedit.pot; \
			msgfmt -o $(podir)/$$lang.gmo $(podir)/$$lang.po; \
			cp $(podir)/$$lang.gmo $$dir/$(DOMAIN).mo; \
			echo "installing $(podir)/$$lang.gmo as $$dir/$(DOMAIN).mo"; \
		fi; \
	done


#ACLOCAL_AMFLAGS = -I m4
